<resources>
    <string name="app_name">Legado</string>
    <string name="app_name_a">Legado·A</string>
    <string name="receiving_shared_label">Legado·search</string>
    <string name="tip_perm_request_storage">Legado needs storage access to find and read books. please go "App Settings" to allow "Storage permission".</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_import_old">Import Legado data</string>
    <string name="webdav_cache_backup">Offline cache book backup</string>
    <string name="webdav_cache_backup_s">Export to local and back up to the exports directory under the legado folder</string>
    <string name="backup_path">Backup to</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="menu_import_github">Import github data</string>
    <string name="menu_replace_rule">Replacement</string>
    <string name="menu_send">Send</string>
    <string name="dialog_title">Prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_setting">Go to Settings</string>
    <string name="tip_cannot_jump_setting_page">Cannot jump to Settings.</string>
    <string name="manual_input">Manual Input</string>
    <string name="enter_directory_path">Enter directory path</string>
    <string name="invalid_directory">Invalid directory path</string>
    <string name="empty_directory_input">Directory path cannot be empty</string>
    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="draw">Warning</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_select_group">Delete Select Group</string>
    <string name="delete_all">Delete all</string>
    <string name="custom_export_section">Custom export chapter of epub</string>
    <string name="replace">Replace</string>
    <string name="replace_purify">Replacement</string>
    <string name="replace_purify_desc">Configure replacement rules</string>
    <string name="not_available">Not available now</string>
    <string name="enable">Enable</string>
    <string name="replace_purify_search">Search Replacement</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="in_favorites">in Favorites</string>
    <string name="out_favorites">Not in Favorites</string>
    <string name="rss">RSS feeds</string>
    <string name="all">All</string>
    <string name="recent_reading">Recent reading</string>
    <string name="last_read">Last reading</string>
    <string name="update_log">What\'s new</string>
    <string name="bookshelf_empty">The bookshelf is still empty. Search for books or add them from discovery!</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="layout_list">List</string>
    <string name="layout_grid3">Grid-3</string>
    <string name="layout_grid4">Grid-4</string>
    <string name="layout_grid5">Grid-5</string>
    <string name="layout_grid6">Grid-6</string>
    <string name="fixed_width_mode">Fixed width mode</string>
    <string name="column_count">Columns</string>
    <string name="grid_width_dp">Width</string>
    <string name="bookshelf_layout">Layout</string>
    <string name="view">View</string>
    <string name="book_library">Library</string>
    <string name="book_local">Import books</string>
    <string name="book_source">Book sources</string>
    <string name="book_source_manage">Sources management</string>
    <string name="book_source_manage_desc">Create/Import/Edit/Manage Book sources</string>
    <string name="setting">Settings</string>
    <string name="theme_setting">Interface settings</string>
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Some function-related settings</string>
    <string name="about">About</string>
    <string name="donate">Donations</string>
    <string name="exit">Exit</string>
    <string name="exit_no_save">It has not been saved. Do you want to continue editing?</string>
    <string name="read_style">Book styles</string>
    <string name="version">Version</string>
    <string name="local">Local</string>
    <string name="search">Search</string>
    <string name="origin_format">Origin: %s</string>
    <string name="read_dur_progress">Origin: %s</string>
    <string name="book_name">Title</string>
    <string name="lasted_show">Latest: %s</string>
    <string name="check_add_bookshelf">Would you like to add %s to your Bookshelf?</string>
    <string name="import_books_count">%s text file(s) in total</string>
    <string name="is_loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="web_service">Web service</string>
    <string name="web_service_desc">Web edit source and read book</string>
    <string name="web_edit_source">Edit book sources on the web</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_t">Offline cache</string>
    <string name="download_to_local">Download to local</string>
    <string name="offline_cache_s">cache the selected chapter(s) to Storage</string>
    <string name="change_origin">Change Origin</string>
    <string name="about_description">
        \u3000\u3000 This is an open source reading software newly developed by Kotlin, welcome to join us.
    </string>
    <string name="app_share_description">
        Legado (YueDu 3.0) download link：\n https://github.com/huajideshutiao/legado/releases
    </string>
    <string name="version_name">Version %s</string>
    <string name="pt_background_verification">Background-verification</string>
    <string name="ps_background_verification">you can operate freely when verifying the book source</string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="pt_auto_download">Auto-download</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="chapter_list">Chapters</string>
    <string name="action_save">Save</string>
    <string name="copy_source">Copy source</string>
    <string name="paste_source">Paste source</string>
    <string name="add">Add</string>
    <string name="import_local">Import local</string>
    <string name="import_on_line">Import online</string>
    <string name="change_icon">Change icon</string>
    <string name="check_select_source">Check the selected source</string>
    <string name="selection_to_top">Selection To Top</string>
    <string name="selection_to_bottom">Selection To Bottom</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="login">Login</string>
    <string name="debug_source">Debug source</string>
    <string name="share_selected_source">Share selected sources</string>
    <string name="discovery">Discovery</string>
    <string name="source_tab_info">Information</string>
    <string name="str_share">Strings sharing</string>
    <string name="audio">Audio</string>
    <string name="change_icon_summary">Switch the software icon displayed on the desktop</string>
    <string name="help">Help</string>
    <string name="group_manage">Group management</string>
    <string name="add_group">Add to Groups</string>
    <string name="remove_group">Remove from Groups</string>
    <string name="group">Group</string>
    <string name="enable_explore">Enable Discovery</string>
    <string name="disable_explore">Disable Discovery</string>
    <string name="enable_selection">Enable selected</string>
    <string name="disable_selection">Disable selected</string>
    <string name="export_selection">Export selected</string>
    <string name="prev_page_key">Page up button</string>
    <string name="next_page_key">Page down button</string>
    <string name="log">Log</string>
    <string name="main_body">Content</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="default_cover">Default cover</string>
    <string name="theme_list">Theme list</string>
    <string name="theme_list_summary">Save, Import, Share theme</string>
    <string name="customize_day_theme">Customize day theme</string>
    <string name="customize_night_theme">Customize night theme</string>
    <string name="page_key_set_help">Focusing on the input box and pressing a physical key will automatically enter the value of the key, and multiple keys will be automatically separated by commas.</string>
    <string name="background_image">Background image</string>
    <string name="export_folder">Export folder</string>
    <string name="export_to_web_dav">Export to WebDav</string>
    <string name="use_default_cover">Always show default cover</string>
    <string name="use_default_cover_s">Always show the default cover, do not show the network cover</string>
    <string name="export_config">Export file config</string>
    <string name="reset">Reset</string>
    <string name="set_source_variable">Set source variable</string>
    <string name="cover_config">cover config</string>
    <string name="cover_config_summary">Generic Cover Rules and Default Cover Style</string>
    <string name="cover_show_name">show name</string>
    <string name="cover_show_name_summary">Book title shown on cover</string>
    <string name="cover_show_author">show author</string>
    <string name="cover_show_author_summary">Author shown on cover</string>
    <string name="font_scale">font scale</string>
    <string name="font_scale_summary">font scale:%.1f</string>
    <string name="check_source_item">Check item</string>
    <string name="check_source_timeout">Single book source check timeout (seconds)</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="auto_indent">Auto indent</string>
    <string name="sort_by_size">Sort by size</string>
    <string name="welcome_style">Launch interface style</string>
    <string name="welcome_style_summary">Startup screen image and whether to display text, etc.</string>
    <string name="show_welcome_text">Display text</string>
    <string name="welcome_text">Legado|Enjoy Good Times</string>
    <string name="enable_welcome">Enable welcome page</string>
    <string name="enable_welcome_summary">Whether to show welcome page on startup</string>
    <string name="show_icon">Show icon</string>
    <string name="show_default_book_icon">Show default book icon</string>
    <string name="only_wifi">WIFI only</string>
    <string name="only_wifi_summary">Load network cover only under wifi</string>
    <string name="cookie">Clear cookie</string>
    <string name="check_selected_interval">Select zones</string>
    <string name="source_edit_text_max_line">Maximum number of rows in the source edit box</string>
    <string name="export_all_use_book_source">Export book source for all books</string>
    <string name="explore_style_video">Video</string>
    <string name="filter_book_type">Filter by Type</string>
    <string name="book_type_novel">Novel</string>
    <string name="book_type_comic">Comic</string>
    <string name="bottom_nav_config">Bottom bar</string>
    <string name="bottom_nav_config_summary">Bar height, icon size, label visibility</string>
    <string name="book_info_horizontal_layout">Wide book details layout</string>
    <string name="book_info_horizontal_layout_summary">Place the cover on the left and book info on the right in the details page</string>
</resources>