<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.Preference
        android:key="bookshelfLayout"
        android:title="@string/bookshelf_layout"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="searchLayout"
        android:title="@string/search_layout"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="bookInfoHorizontalLayout"
        android:summary="@string/book_info_horizontal_layout_summary"
        android:title="@string/book_info_horizontal_layout"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="coverConfig"
        android:summary="@string/cover_config_summary"
        android:title="@string/cover_config"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.IconListPreference
        android:defaultValue="ic_launcher"
        android:entries="@array/icon_names"
        android:entryValues="@array/icons"
        android:key="launcherIcon"
        android:summary="@string/change_icon_summary"
        android:title="@string/change_icon"
        app:iconSpaceReserved="false"
        app:icons="@array/icons" />

    <io.legado.app.lib.prefs.Preference
        android:key="welcomeStyle"
        android:summary="@string/welcome_style_summary"
        android:title="@string/welcome_style"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="bottomNavConfig"
        android:summary="@string/bottom_nav_config_summary"
        android:title="@string/bottom_nav_config"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="themeList"
        android:summary="@string/theme_list_summary"
        android:title="@string/theme_list"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="customizeDayTheme"
        android:title="@string/customize_day_theme"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="customizeNightTheme"
        android:title="@string/customize_night_theme"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="fontScale"
        android:summary="@string/font_scale_summary"
        android:title="@string/font_scale"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="sourceEditMaxLine"
        android:title="@string/source_edit_text_max_line"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>
