<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_play_24dp"
        android:title="@string/action_download"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_book_group"
        android:icon="@drawable/ic_groups"
        android:title="@string/group"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menu_group_manage"
                android:title="@string/group_manage" />

        </menu>

    </item>

    <item
        android:id="@+id/menu_filter_book_type"
        android:title="@string/filter_book_type"
        app:showAsAction="never">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/menu_filter_type_all"
                    android:title="@string/all" />

                <item
                    android:id="@+id/menu_filter_type_novel"
                    android:title="@string/book_type_novel" />

                <item
                    android:id="@+id/menu_filter_type_comic"
                    android:title="@string/book_type_comic" />

                <item
                    android:id="@+id/menu_filter_type_audio"
                    android:title="@string/audio" />

                <item
                    android:id="@+id/menu_filter_type_video"
                    android:title="@string/explore_style_video" />

            </group>

        </menu>

    </item>

    <item
        android:id="@+id/menu_export_all_use_book_source"
        android:title="@string/export_all_use_book_source" />

    <item
        android:id="@+id/menu_enable_replace"
        android:checkable="true"
        android:title="@string/replace_purify"
        app:showAsAction="never" />

    <!--自定义导出章节 选择菜单-->
    <item
        android:id="@+id/menu_enable_custom_export"
        android:checkable="true"
        android:title="@string/custom_export_section"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_web_dav"
        android:checkable="true"
        android:title="@string/export_to_web_dav"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_folder"
        android:title="@string/export_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_config"
        android:title="@string/export_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_log"
        android:title="@string/log"
        app:showAsAction="never" />

</menu>
