<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_debug_source"
        android:icon="@drawable/ic_bug_report"
        android:title="@string/debug_source"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_login"
        android:title="@string/login"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_cookie"
        android:title="@string/cookie"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_copy_source"
        android:title="@string/copy_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_paste_source"
        android:title="@string/paste_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_auto_indent"
        android:title="@string/auto_indent"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_set_source_variable"
        android:title="@string/set_source_variable"
        app:showAsAction="never" />



    <item
        android:id="@+id/menu_share_str"
        android:title="@string/str_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/help"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_rule_help"
                android:title="书源教程" />
            <item
                android:id="@+id/menu_js_help"
                android:title="JS 教程" />
            <item
                android:id="@+id/menu_regex_help"
                android:title="正则教程" />
        </menu>
    </item>

</menu>