<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="enableWelcome"
        android:summary="@string/enable_welcome_summary"
        android:title="@string/enable_welcome"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="welcomeDelay"
        android:title="@string/welcome_delay"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="welcomeShowText"
        android:summary="@string/welcome_text"
        android:title="@string/show_welcome_text"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="welcomeShowIcon"
        android:summary="@string/show_default_book_icon"
        android:title="@string/show_icon"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="dayThemeCategory"
        android:title="@string/day"
        app:iconSpaceReserved="false">

        <io.legado.app.lib.prefs.Preference
            android:key="welcomeImagePath"
            android:title="@string/background_image"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="nightThemeCategory"
        android:title="@string/night"
        app:iconSpaceReserved="false">

        <io.legado.app.lib.prefs.Preference
            android:key="welcomeImagePathDark"
            android:title="@string/background_image"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
