<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.Preference
        android:key="bookshelfCoverHeight"
        android:summary="@string/bookshelf_cover_height_summary"
        android:title="@string/bookshelf_cover_height"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:key="loadCoverOnlyWifi"
        android:defaultValue="false"
        android:title="@string/only_wifi"
        android:summary="@string/only_wifi_summary" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="useDefaultCover"
        android:summary="@string/use_default_cover_s"
        android:title="@string/use_default_cover"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="dayThemeCategory"
        android:title="@string/day"
        app:iconSpaceReserved="false">

        <io.legado.app.lib.prefs.Preference
            android:key="defaultCover"
            android:title="@string/default_cover"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="coverShowName"
            android:title="@string/cover_show_name"
            android:summary="@string/cover_show_name_summary"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="coverShowAuthor"
            android:title="@string/cover_show_author"
            android:summary="@string/cover_show_author_summary"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="nightThemeCategory"
        android:title="@string/night"
        app:iconSpaceReserved="false">

        <io.legado.app.lib.prefs.Preference
            android:key="defaultCoverDark"
            android:title="@string/default_cover"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="coverShowNameN"
            android:title="@string/cover_show_name"
            android:summary="@string/cover_show_name_summary"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="coverShowAuthorN"
            android:title="@string/cover_show_author"
            android:summary="@string/cover_show_author_summary"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
