<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menu_sort_name"
                android:checkable="true"
                android:title="@string/sort_by_name"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_sort_size"
                android:checkable="true"
                android:title="@string/sort_by_size"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_sort_time"
                android:checkable="true"
                android:title="@string/sort_by_time"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>
