<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/dialog_title_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/arco_spacing_default"
        android:paddingTop="@dimen/arco_spacing_default">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/check_source_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:hint="@string/check_source_timeout"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <io.legado.app.ui.widget.text.AccentTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/arco_spacing_md"
        android:text="@string/check_source_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/arco_spacing_default">

        <CheckBox
            android:id="@+id/check_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search" />

        <CheckBox
            android:id="@+id/check_discovery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discovery" />

        <CheckBox
            android:id="@+id/check_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/source_tab_info" />

        <CheckBox
            android:id="@+id/check_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chapter_list" />

        <CheckBox
            android:id="@+id/check_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_body" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingHorizontal="@dimen/arco_spacing_md">

        <io.legado.app.ui.widget.text.AccentTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/arco_spacing_md"
            android:text="@string/cancel"
            tools:ignore="RtlHardcoded" />

        <io.legado.app.ui.widget.text.AccentTextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/arco_spacing_md"
            android:text="@string/ok"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
</LinearLayout>
